[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Enemies/Incomplete/Idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Incomplete.gd" type="Script" id=2]
[ext_resource path="res://Items/WandRenderSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Particles/fire.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[node name="Incomplete" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 24
collision_mask = 10
script = ExtResource( 2 )

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 7, 0 )
frames = SubResource( 4 )
playing = true

[node name="Fire2" type="AnimatedSprite" parent="Fire"]
position = Vector2( -9, 3 )
frames = SubResource( 4 )
playing = true

[node name="Fire5" type="AnimatedSprite" parent="Fire"]
position = Vector2( -4, 3 )
frames = SubResource( 4 )
playing = true

[node name="Fire3" type="AnimatedSprite" parent="Fire"]
position = Vector2( -9, -13 )
frames = SubResource( 4 )
playing = true

[node name="Fire4" type="AnimatedSprite" parent="Fire"]
position = Vector2( -16, 2 )
frames = SubResource( 4 )
playing = true

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="Eye" type="RayCast2D" parent="."]
collision_mask = 3

[node name="Senses" type="RayCast2D" parent="."]
collision_mask = 10

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -350, -200 )
rect = Rect2( 0, 0, 700, 400 )
process_parent = true
physics_process_parent = true

[node name="WandRenderSprite" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, -17 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
